--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -5,14 +5,7 @@
 
 <div id="container" class="js-masonry"
   data-masonry-options='{ "columnWidth": 200, "itemSelector": ".masonryImage" }'>
-    <div class="masonryImage">
-        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
-    </div>
-         
-    <div class="masonryImage">
-        <img src="http://www.easy-gbpics.de/data/media/56/animation_gif_0197_easy-gbpics.de.gif" alt="">
-    </div>
-         
+        
     <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
@@ -34,7 +27,6 @@
     <div class="masonryImage">
         <img src="../../Img/nuss.png" alt="">
     </div>
-         
     <div class="masonryImage">
         <img src="../../Img/wall.jpg" alt="">
     </div>
@@ -49,7 +41,20 @@
     <div class="masonryImage">
         <img src="../../Img/froh.jpg" alt="">
     </div>
-
+    <div class="masonryImage">
+        <img src="../../Img/wall.jpg" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/kartoffel.png" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="../../Img/egg.jpg" alt="">
+    </div>
+         
+    <div class="masonryImage">
+        <img src="http://www.nacacnet.org/studentinfo/PublishingImages/fish.jpg" alt="">
+    </div>
      
 </div>
 
