--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -13,7 +13,7 @@
         <img src="../../Img/tomate.png" alt="">
     </div>
          
-    <div class="masonryImage">
+    <div class="masonryImage.w4">
         <img src="../../Img/cloud.png" alt="">
     </div>
          
@@ -30,15 +30,15 @@
     <div class="masonryImage">
         <img src="../../Img/wall.jpg" alt="">
     </div>
-    <div class="masonryImage">
+    <div class="masonryImage.w3">
         <img src="../../Img/kartoffel.png" alt="">
     </div>
          
-    <div class="masonryImage">
+    <div class="masonryImage.w4">
         <img src="../../Img/egg.jpg" alt="">
     </div>
          
-    <div class="masonryImage">
+    <div class="masonryImage.w2">
         <img src="../../Img/froh.jpg" alt="">
     </div>
     <div class="masonryImage">
@@ -49,12 +49,10 @@
     </div>
          
     <div class="masonryImage">
-        <img src="../../Img/egg.jpg" alt="">
+        <img src="../../Img/favicon.jpg" alt="">
     </div>
          
-    <div class="masonryImage">
-        <img src="http://www.nacacnet.org/studentinfo/PublishingImages/fish.jpg" alt="">
-    </div>
+
      
 </div>
 
