--- a/app/assets/stylesheets/0_stores.css.scss
+++ b/app/assets/stylesheets/0_stores.css.scss
@@ -2,4 +2,6 @@
 
 .masonryImage { width: 25%; }
 .masonryImage.w2 { width: 50%; }
+.masonryImage.w3 { width: 75%; }
+.masonryImage.w4 { width: 20%; }
 
