--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -12,48 +12,36 @@
     <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
-         
-    <div class="masonryImage.w4">
-        <img src="../../Img/cloud.png" alt="">
-    </div>
-         
     <div class="masonryImage">
-        <img src="../../Img/spoon.jpg" alt="">
+        <img src="../../Img/kiwi.png" alt="">
     </div>
     <div class="masonryImage">
-        <img src="../../Img/Tönnchen.png" alt="">
+        <img src="../../Img/tomate.png" alt="">
     </div>
-         
-    <div class="masonryImage">
-        <img src="../../Img/nuss.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/wall.jpg" alt="">
-    </div>
-    <div class="masonryImage.w3">
-        <img src="../../Img/kartoffel.png" alt="">
-    </div>
-         
-    <div class="masonryImage.w4">
-        <img src="../../Img/egg.jpg" alt="">
-    </div>
-         
-    <div class="masonryImage.w2">
-        <img src="../../Img/froh.jpg" alt="">
+   <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
     </div>
     <div class="masonryImage">
-        <img src="../../Img/wall.jpg" alt="">
+        <img src="../../Img/tomate.png" alt="">
     </div>
     <div class="masonryImage">
-        <img src="../../Img/kartoffel.png" alt="">
+        <img src="../../Img/kiwi.png" alt="">
     </div>
-         
     <div class="masonryImage">
-        <img src="../../Img/favicon.jpg" alt="">
+        <img src="../../Img/tomate.png" alt="">
     </div>
-         
-
-     
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
 </div>
 
   </body>
