--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -3,46 +3,47 @@
 <body>
 
 
-<div id="container" class="js-masonry"
+<div id="container" class="masonry"
   data-masonry-options='{ "columnWidth": 200, "itemSelector": ".masonryImage" }'>
         
     <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage">
+    <div class="masonryImage.w1">
         <img src="../../Img/tomate.png" alt="">
     </div>
-    <div class="masonryImage">
+    <div class="masonryImage.w2">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage">
+    <div class="masonryImage.w4">
         <img src="../../Img/tomate.png" alt="">
     </div>
    <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage">
+    <div class="masonryImage.w1">
         <img src="../../Img/tomate.png" alt="">
     </div>
-    <div class="masonryImage">
+    <div class="masonryImage.w2">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage.w3">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage.w4">
         <img src="../../Img/kiwi.png" alt="">
     </div>
     <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
-    <div class="masonryImage">
+    <div class="masonryImage.w1">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="masonryImage">
+    <div class="masonryImage.w2">
         <img src="../../Img/tomate.png" alt="">
     </div>
 </div>
+
 
   </body>
 
