--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,22 +5,21 @@
   <title>von hamburgern für die welt</title>
 
 
-<script>
-var container = document.querySelector('#container');
-var msnry = new Masonry( container, {
-  columnWidth: 200,
-  itemSelector: '.item'
-});
-</script>
-
-<script>
-var container = document.querySelector('#container');
-var msnry;
-// initialize Masonry after all images have loaded
-imagesLoaded( container, function() {
-  msnry = new Masonry( container );
-});
-</script>
+   <script src="../js/jquery-1.7.1.min.js"></script>
+   <script src="../jquery.masonry.min.js"></script>
+   <script>
+     $(function(){
+   
+       var $container = $('#container');
+     
+       $container.imagesLoaded( function(){
+         $container.masonry({
+           itemSelector : '.masonryImage'
+         });
+       });
+     
+     });
+   </script>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
