--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -9,37 +9,37 @@
     <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage.w1">
+    <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
-    <div class="masonryImage.w2">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="masonryImage.w4">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-   <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage.w2">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="masonryImage.w3">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage.w4">
+    <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
     <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
-    <div class="masonryImage.w1">
+   <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage.w2">
+    <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage.">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
 </div>
