--- a/app/assets/stylesheets/0_stores.css.scss
+++ b/app/assets/stylesheets/0_stores.css.scss
@@ -48,3 +48,10 @@ only screen and (max-device-width : 399px){
         width: 200px;
     }
 }
+
+
+/* not quite 33.3% 
+.item { width: 33.2%; }
+
+images cover up the gap 
+.item img { width: 100.5%; }*/
