--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
      
        $container.imagesLoaded( function(){
          $container.masonry({
-           itemSelector : '.masonryImage'
+           itemSelector : '.item'
          });
        });
      
