--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -4,42 +4,42 @@
 
 
 <div id="container" class="masonry"
-  data-masonry-options='{ "columnWidth": 200, "itemSelector": ".masonryImage" }'>
+  data-masonry-options='{ "columnWidth": 200, "itemSelector": ".item" }'>
         
-    <div class="masonryImage">
+    <div class="item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="item">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+   <div class="item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="item">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+   <div class="item">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="item">
         <img src="../../Img/kiwi.png" alt="">
     </div>
     <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
-    <div class="masonryImage">
+ <div class="item">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage">
+ <div class="item">
         <img src="../../Img/tomate.png" alt="">
     </div>
-   <div class="masonryImage">
+ <div class="item">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage.">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="masonryImage">
+ <div class="item">
         <img src="../../Img/tomate.png" alt="">
     </div>
 </div>
