--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@ var msnry = new Masonry( container, {
    </script>
 
    <script>
-// initialize Masonry
-var msnry = new Masonry( container );
-// layout Masonry again after all images have loaded
+var container = document.querySelector('#container');
+var msnry;
+// initialize Masonry after all images have loaded
 imagesLoaded( container, function() {
-  msnry.layout();
+  msnry = new Masonry( container );
 });
    </script>
 
