--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -8,12 +8,12 @@ pre {
 li {
   padding-left: 40px;
   padding-right: 5px;
+  color: black
 }
 
 a {
   color: #000;
   &:visited {
-    color: #fff;
   }
 
 &:hover {
