--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,44 +2,41 @@
 
 <body>
 
-
-<div id="container" class="masonry"
-  data-masonry-options='{ "columnWidth": 200, "itemSelector": ".item" }'>
-        
-    <div class="item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="item">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-   <div class="item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="item">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-   <div class="item">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="item">
+<div id="container">
+    <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
     <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
- <div class="item">
+   <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
- <div class="item">
+ <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
- <div class="item">
+ <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
- <div class="item">
+   <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
 </div>
