--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -47,6 +47,15 @@
     <%= f.label :aktion %><br>
     <%= f.text_field :aktion %>
   </div>
+    <div class="field">
+    <%= f.label :street %><br>
+    <%= f.text_field :street %>
+  </div>
+      <div class="field">
+    <%= f.label :street %><br>
+    <%= f.text_field :street %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
