--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,5 +45,11 @@
   <%= @product.aktion %>
 </p>
 
+<p>
+  <strong>Street:</strong>
+  <%= @product.street %>
+</p>
+
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
