--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,6 +12,7 @@
       <th>Lieferzeit</th>
       <th>Preis</th>
       <th>Aktion</th>
+      <th>Street</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -28,6 +29,7 @@
         <td><%= product.lieferzeit %></td>
         <td><%= product.preis %></td>
         <td><%= product.aktion %></td>
+        <td><%= product.street %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
