--- a/app/assets/stylesheets/0_stores.css.scss
+++ b/app/assets/stylesheets/0_stores.css.scss
@@ -9,48 +9,62 @@
     margin: 0 auto;
 }
 
-img {
-    margin-top: -4px;
-}
 
-@media only screen and (max-width : 1199px),
-only screen and (max-device-width : 1199px){
-    #container {
-        width: 1000px;
-    }
-}
+
+/* @media only screen and (max-width : 1199px),
+*only screen and (max-device-width : 1199px){
+*    #container {
+*       width: 1000px;
+*    }
+}*/
  
  
-@media only screen and (max-width : 999px),
-only screen and (max-device-width : 999px){
-    #container {
-        width: 800px;
-    }
-}
+/* @media only screen and (max-width : 999px),
+*only screen and (max-device-width : 999px){
+*   #container {
+ *       width: 800px;
+  *  }
+} */
  
-@media only screen and (max-width : 799px),
-only screen and (max-device-width : 799px){
-    #container {
-        width: 600px;
-    }
-}
+/* @media only screen and (max-width : 799px),
+* only screen and (max-device-width : 799px){
+*     #container {
+*         width: 600px;
+*     }
+} */
  
-@media only screen and (max-width : 599px),
-only screen and (max-device-width : 599px){
-    #container {
-        width: 400px;
-    }
-}
+/* @media only screen and (max-width : 599px),
+* only screen and (max-device-width : 599px){
+*     #container {
+*         width: 400px;
+*     }
+} */
  
-@media only screen and (max-width : 399px),
-only screen and (max-device-width : 399px){
-    #container {
-        width: 200px;
-    }
-}
+/* @media only screen and (max-width : 399px),
+*only screen and (max-device-width : 399px){
+*    #container {
+*        width: 200px;
+*    }
+} */
 
 .masonryImage {
     width: 333px;
-    height: 459px;
+    height: 234px;
     margin-bottom: none;
 }
+
+.masonryImage.w1 {
+    width: 341px;
+    height: 470px;
+    margin-bottom: none;
+}
+
+.masonryImage.w2 {
+    width: 333px;
+    height: 468px;
+    margin-bottom: none;
+}
+
+
+
+
