--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -6,28 +6,124 @@
     <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class="masonryImage">
+    <div class=".masonryImage.w1">
         <img src="../../Img/tomate.png" alt="">
     </div>
    <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
+ <div class=".masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+   <div class=".masonryImage.w3">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class=".masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
  <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
  <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-   <div class="masonryImage">
+ <div class="masonryImage">
         <img src="../../Img/tomate.png" alt="">
     </div>
- <div class="masonryImage">
+    <div class="masonryImage.w1">
         <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
     </div>
     <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
         <img src="../../Img/tomate.png" alt="">
     </div>
  <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+        <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+        <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage.w1">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="masonryImage">
+        <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="masonryImage">
         <img src="../../Img/kiwi.png" alt="">
     </div>
  <div class="masonryImage">
