--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,141 +2,72 @@
 
 <body>
 
-<div id="container">
-    <div class="masonryImage">
+<div id="mycontainer">
+<div class="clearfix mosaicflow" data-item-selector=".item" data-max-item-width="341">    
+<div class="mosaicflow__item">
         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class=".masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
     </div>
-   <div class="masonryImage">
+ <div class="mosaicflow__item">
         <img src="../../Img/kiwi.png" alt="">
     </div>
- <div class=".masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
     </div>
- <div class="masonryImage">
+ <div class="mosaicflow__item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+ <div class="mosaicflow__item">          
         <img src="../../Img/kiwi.png" alt="">
     </div>
-   <div class=".masonryImage.w3">
-        <img src="../../Img/tomate.png" alt="">
+ <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
     </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
+ <div class="mosaicflow__item">
+         <img src="../../Img/kiwi.png" alt="">
     </div>
-    <div class=".masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage.w1">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-        <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-        <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage.w1">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="masonryImage">
-        <img src="../../Img/tomate.png" alt="">
-    </div>
-</div>
-
+ </div>
 
   </body>
 
