--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,72 +2,235 @@
 
 <body>
 
-<div id="mycontainer">
-<div class="clearfix mosaicflow" data-item-selector=".item" data-max-item-width="341">    
-<div class="mosaicflow__item">
+<div class="clearfix mosaicflow" data-item-selector=".item">
+<div class="mosaicflow__column">
+    <div class="mosaicflow item">
+        <img src="../../Img/egg.jpg" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/nuss.png" alt="">
+    </div>
+     <div class="mosaicflow item">
         <img src="../../Img/kiwi.png" alt="">
     </div>
- <div class="mosaicflow__item">
+    <div class="mosaicflow item">
          <img src="../../Img/tomate.png" alt="">
     </div>
- <div class="mosaicflow__item">
+     <div class="mosaicflow item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+         </div>
+    <div class="mosaicflow item">
         <img src="../../Img/kiwi.png" alt="">
     </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
- <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
- <div class="mosaicflow__item">          
+    <div class="mosaicflow item">
         <img src="../../Img/kiwi.png" alt="">
     </div>
- <div class="mosaicflow__item">
+    <div class="mosaicflow item">
          <img src="../../Img/tomate.png" alt="">
     </div>
- <div class="mosaicflow__item">
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div> 
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="mosaicflow item">
          <img src="../../Img/kiwi.png" alt="">
     </div>
- </div>
+    <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+         </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>  
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+    </div>
+
+<div class="mosaicflow__column">
+    <div class="mosaicflow item">
+        <img src="../../Img/egg.jpg" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/nuss.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+         </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div> 
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+         </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>  
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+    </div>
+
+<div class="mosaicflow__column">
+    <div class="mosaicflow item">
+        <img src="../../Img/egg.jpg" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/nuss.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+         </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div> 
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+         </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>  
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+    </div>
+
+<div class="mosaicflow__column">
+    <div class="mosaicflow item">
+        <img src="../../Img/egg.jpg" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/nuss.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+         </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div> 
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow__item">
+         <img src="../../Img/tomate.png" alt="">
+         </div>
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>  
+    <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+    <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+        <img src="../../Img/kiwi.png" alt="">
+    </div>
+     <div class="mosaicflow item">
+         <img src="../../Img/tomate.png" alt="">
+    </div>
+    </div>
+    </div>
 
   </body>
 
