--- a/app/assets/stylesheets/0_stores.css.scss
+++ b/app/assets/stylesheets/0_stores.css.scss
@@ -1,36 +1,31 @@
 
 
-.masonryImage {
-    width: 341px;
-    height: 234px;
-    margin-bottom: none;
+.clearfix.mosaicflow {
+	visibility: visible;
+	position: relative; 
+	overflow: hidden; 
+	height: 4930px;
 }
-
-.masonryImage.w1 {
-    width: 341px;
-    height: 470px;
-    margin-bottom: none;
-}
-
-.masonryImage.w2 {
-    width: 341px;
-    height: 468px;
-    margin-bottom: none;
-}
-
-
 
 .mosaicflow__column {
-    float:left;
     width: 341px;
-    }
-    
-.mosaicflow__item img {
-    display:block;
-    width: 341px;
-    height: 234px;
+    float: left;
 }
 
-.mosaicflow__item {
-    clientWidth: 341px;
+.mosaicflow.item  { 
+position: relative;
+width: 341px;
 }
+
+
+.mosaicflow.item img { 
+display:block; 
+width: 25%; 
+height:auto; 
+max-width: 341px;
+}
+
+div {
+	display:block;
+}
+
