--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,238 +2,15 @@
 
 <body>
 
-<div class="clearfix mosaicflow" data-item-selector=".item">
-<div class="mosaicflow__column">
-    <div class="mosaicflow item">
-        <img src="../../Img/egg.jpg" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/nuss.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-         </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div> 
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-         </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>  
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-    </div>
+<div id="big-video-wrap">
+<div id="big-video-vid" class="video-js vjs-default-skin vjs-controls-disabled vjs-has-started vjs-playing vjs-user-interactive" style="width: 644px; height: 268.333333333px; display: block; top: -45.166666666667px; left: 0px;">
+<video id="big-video-vid_html5_api" class="vjs-tech" preload="auto" datasetup="{}" webkit-playsinline style="position: absolute; width: 644px; height: auto;" iframe src="//player.vimeo.com/video/87150445" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/87150445">Retrospective//</a> from <a href="http://vimeo.com/user2806218">M/14</a> on <a href="https://vimeo.com">Vimeo</a>.</p>">
 
-<div class="mosaicflow__column">
-    <div class="mosaicflow item">
-        <img src="../../Img/egg.jpg" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/nuss.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-         </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div> 
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-         </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>  
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-    </div>
+</div class="nav box" id="nav">
+<a href:"#overview" class="nav-link">Overview</a>
+<a href:"#setup" class="nav-link">Setup</a>
+</div>
 
-<div class="mosaicflow__column">
-    <div class="mosaicflow item">
-        <img src="../../Img/egg.jpg" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/nuss.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-         </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div> 
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-         </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>  
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-    </div>
-
-<div class="mosaicflow__column">
-    <div class="mosaicflow item">
-        <img src="../../Img/egg.jpg" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/nuss.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-         </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div> 
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow__item">
-         <img src="../../Img/tomate.png" alt="">
-         </div>
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>  
-    <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-    <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-        <img src="../../Img/kiwi.png" alt="">
-    </div>
-     <div class="mosaicflow item">
-         <img src="../../Img/tomate.png" alt="">
-    </div>
-    </div>
-    </div>
-
-  </body>
-
- 
+</body>
 </html>
 
