--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -2,9 +2,8 @@
 
 <body>
 
-<div id="bigvideo">
-
-    $(function() {
+<div id="big-video-wrap">
+ $().ready(function() {
     var BV = new $.BigVideo();
     BV.init();
     BV.show('https://vimeo.com/87150445',{ambient:true});
