--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -1,11 +1,12 @@
 <html>
 
 <head>
-        <script type="text/javascript">
-$(function() {
+       <script type="text/javascript">
+
+         $().ready(function() {
     var BV = new $.BigVideo();
     BV.init();
-    BV.show('http://vjs.zencdn.net/v/oceans.mp4',{ambient:true});
+    BV.show('http://vimeo.com/87150445',{ambient:true});
 });
         </script>
 
