--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-       <script type="text/javascript">
+       <script>
 
          $().ready(function() {
     var BV = new $.BigVideo();
