--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -1,6 +1,18 @@
 <html>
 
 <head>
+
+<script type="text/javascript">
+  document.createElement('video');document.createElement('audio');document.createElement('track');
+</script>
+
+<link href="//example.com/path/to/video-js.css" rel="stylesheet">
+<script src="//example.com/path/to/video.js"></script>
+<script>
+  videojs.options.flash.swf = "http://example.com/path/to/video-js.swf"
+</script>
+
+
        <script>
 
          $().ready(function() {
