--- a/app/views/pages/stores.html.erb
+++ b/app/views/pages/stores.html.erb
@@ -6,10 +6,10 @@
   document.createElement('video');document.createElement('audio');document.createElement('track');
 </script>
 
-<link href="//example.com/path/to/video-js.css" rel="stylesheet">
-<script src="//example.com/path/to/video.js"></script>
+<link href="../stylesheets/video-js.css" rel="stylesheet">
+<script src="../javascripts/video.js"></script>
 <script>
-  videojs.options.flash.swf = "http://example.com/path/to/video-js.swf"
+  videojs.options.flash.swf = "../javascripts/video-js.swf"
 </script>
 
 
